[package]
name = "ssh-rev-exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4.0.29", features = ["derive", "env"] }
env_logger = "0.10.0"
futures = { version = "0.3.25", default-features = false, features = ["std", "async-await"] }
log = "0.4.17"
num_enum = "0.5.7"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["net", "process", "rt", "sync", "io-std", "io-util", "parking_lot", "macros"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
